fix: iphone se alignment

--- a/apps/src/app/faq/components/FAQTable.module.css
+++ b/apps/src/app/faq/components/FAQTable.module.css
@@ -190,3 +190,9 @@
     padding-left: 30px;
   }
 }
+
+@media (max-width: 376px) {
+  .container {
+    margin: -200px auto 0;
+  }
+}
